// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots AverageTable should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Average performance
          </span>
        </h2>
      </header>
      <div
        className="sc-iAyFgw fymstO"
        id="js-dom-to-png-average"
      >
        <div
          className="sc-htpNat klaPdF"
        >
          <div
            className="sc-bxivhb cRnhtv"
          >
            <div
              className="sc-ifAKCX kiQAin"
            />
            <h1
              className="sc-EHOje dWbWPz"
            >
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                There are no analytics for this date range
              </span>
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots AverageTable should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Average performance
          </span>
        </h2>
      </header>
      <div
        className="sc-iAyFgw fymstO"
        id="js-dom-to-png-average"
      >
        <div
          className="sc-bwzfXH dXsGsm"
        >
          <div
            className="sc-bdVaJa fsNrov"
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots AverageTable should render the average table for 7 days 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Average performance
          </span>
        </h2>
      </header>
      <div
        className="sc-iAyFgw fymstO"
        id="js-dom-to-png-average"
      >
        <ul
          className="sc-kkGfuU iljRqu"
        >
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average impressions per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    193.8k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        181
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average likes per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    1,140
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        169
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average comments per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    2,305
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        363
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots AverageTable should render the average table for 30 days 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Average performance
          </span>
        </h2>
      </header>
      <div
        className="sc-iAyFgw fymstO"
        id="js-dom-to-png-average"
      >
        <ul
          className="sc-kkGfuU iljRqu"
        >
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average impressions per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    85.0k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        21
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average likes per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    502
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        40
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average comments per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    669
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots AverageTable should render the average table for 90 days 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      className="sc-kgoBCf fymEWw"
    >
      <header
        className="sc-kGXeez esQcyC"
      >
        <h2
          className="sc-kpOJdX hkatTF"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            Average performance
          </span>
        </h2>
      </header>
      <div
        className="sc-iAyFgw fymstO"
        id="js-dom-to-png-average"
      >
        <ul
          className="sc-kkGfuU iljRqu"
        >
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average impressions per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    84.4k
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        36
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average likes per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    572
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#FF4040"
                          transform="translate(10 9) rotate(-180)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#ff1e1e",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        69
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="sc-gZMcBi dxiVBh"
            width="33.333333333333336%"
          >
            <div
              className="sc-gqjmRU gggsyL"
            >
              <div
                className="sc-jTzLTM gUMRxz"
              />
              <span
                className="sc-iwsKbI eveHfQ"
              >
                <span
                  data-tip={null}
                >
                  <span
                    style={
                      Object {
                        "color": "#59626a",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average comments per post
                  </span>
                </span>
              </span>
              <div
                className="sc-VigVT eVESgP"
              >
                <span
                  style={
                    Object {
                      "color": "#323b43",
                      "fontFamily": "\\"Roboto\\", sans-serif",
                      "fontSize": "1.5rem",
                      "fontWeight": 700,
                    }
                  }
                >
                  <span>
                    744
                  </span>
                </span>
                <div
                  className="sc-gzVnrw jPCrAy"
                >
                  <div
                    className="sc-htoDjs gNzaNl"
                  >
                    <div
                      className="sc-bZQynM bhDWTq"
                    >
                      <svg
                        fill="none"
                        height="11"
                        viewBox="0 0 11 11"
                        width="11"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="white"
                          height="11"
                          width="11"
                        />
                        <path
                          d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                          fill="#2FD566"
                          transform="translate(1 2)"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="sc-dnqmqq fSJNbt"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2fd566",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 700,
                        }
                      }
                    >
                      <span>
                        18
                      </span>
                      %
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots Title should render title as if for app 1`] = `
<span>
  <h2
    className="sc-kpOJdX hkatTF"
  >
    <span
      style={
        Object {
          "color": "#323b43",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 700,
        }
      }
    >
      Average performance
    </span>
  </h2>
</span>
`;

exports[`Snapshots Title should render title as if for report 1`] = `
<span>
  <h2
    className="sc-kpOJdX hkatTF"
  >
    <span
      style={
        Object {
          "color": "#000",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 700,
        }
      }
    >
      Average performance
    </span>
  </h2>
</span>
`;
